# libfridge

./: .gitignore  README.md  demo.vala  meson.build  meson_options.txt
.github/workflows/: ci.yml
src/: demo.vala  json_storage.vala  library.vala  meson.build  string_storage.vala
